<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ChildLayout"
    tools:context="pl.bartekpawlowski.musicalstructure.PlayActivity">

    <TextView
        style="@style/ChildLayoutTextElement"
        android:text="@string/activity_play_desc" />

    <LinearLayout style="@style/Row.Bottom">

        <RelativeLayout
            android:id="@+id/playlistButton"
            style="@style/RowElement">

            <ImageView
                android:id="@+id/playlist"
                style="@style/RowElementIcon"
                android:contentDescription="@string/icon_playlist"
                android:src="@drawable/ic_view_list_black_48dp" />

            <TextView
                style="@style/RowElementText"
                android:layout_below="@id/playlist"
                android:text="@string/playlist" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/paymentButton"
            style="@style/RowElement">

            <ImageView
                android:id="@+id/payment"
                style="@style/RowElementIcon"
                android:contentDescription="@string/icon_settings"
                android:src="@drawable/ic_payment_black_48dp" />

            <TextView
                style="@style/RowElementText"
                android:layout_below="@id/payment"
                android:text="@string/payment" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
